fixes and adjustements